--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,64 @@
+*,
+html,
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+	color: #fff;
+	overflow: hidden;
+	text-align: center;
+	background-color: rgb(0, 0, 29);
+	font-family: "Courier New", Courier, monospace;
+}
+
+.app {
+	margin-block-start: 10vh;
+}
+
+.container {
+	height: 80vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.camera {
+	margin: auto;
+}
+
+.canvas {
+	position: absolute;
+	margin-right: auto;
+	top: 190px;
+	left: 60px;
+	text-align: center;
+	z-index: 9px;
+	width: 640px;
+	height: 480px;
+}
+
+.emoji {
+	position: absolute;
+	margin-right: auto;
+	top: 220px;
+	left: 600px;
+	text-align: center;
+	height: 50px;
+}
+
+.video {
+	margin: auto;
+	width: 640px;
+	display: block;
+	border-radius: 20px;
+	overflow: hidden;
+}
+
+.video video {
+	width: 100%;
+	height: 100%;
+	border-radius: 20px;
 }
